# fastait

./: LICENSE  README.md  benchmark.py  demo.py  download_test_data.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml
fastait/: data.py  io.py  pct.py  plot.py  ppt.py  profiler.py  statistics.py  tsr.py  validate.py
misc/: rain.csv
tests/: test_data.py  test_gpu.py  test_io.py  test_pct.py  test_ppt.py  test_profiler.py  test_statistics.py  test_tsr.py
