[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastait"
version = "0.1.0"
description = "Accelerated post-processing for Active Infrared Thermography"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name="Rubén Usamentiaga" }
]

dependencies = [
  "torch==2.8.0",
  "numpy==2.2.3",
  "tqdm==4.67.1",
  "tqdm==4.67.1",
  "natsort==8.4.0"
]

[project.urls]
Homepage = "https://github.com/rusamentiaga/fastait"