[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastait"
version = "0.1.0"
description = "Accelerated post-processing for Active Infrared Thermography"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="Rubén Usamentiaga" }
]

dependencies = [
  "torch==2.8.0",
  "numpy==2.2.3",
  "tqdm==4.67.1",
  "natsort==8.4.0",
  "matplotlib==3.9.2",
  "ipywidgets==8.1.7",
  "ipympl==0.9.4"
]

[project.urls]
Homepage = "https://github.com/rusamentiaga/fastait"

[tool.setuptools]
packages = ["fastait"]